fix: update tool name

--- a/notebooks/assistant_test.ipynb
+++ b/notebooks/assistant_test.ipynb
@@ -61,7 +61,7 @@
     "        \"configurable\": {\n",
     "            \"system_prompt\": \"You are a helpful AI assistant that can help with research.\",\n",
     "            \"model\": \"openai/gpt-4.1\",\n",
-    "            \"selected_tools\": [\"get_todays_date\", \"advanced_research\"]\n",
+    "            \"selected_tools\": [\"get_todays_date\", \"advanced_research_tool\"]\n",
     "        }\n",
     "    },\n",
     "    name=\"Demo Assistant\"\n",
