--- a/notebooks/assistant_test.ipynb
+++ b/notebooks/assistant_test.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,8 +29,8 @@
     "\n",
     "# ---- SETUP ----\n",
     "# Replace with your deployed LangGraph API URL and API key\n",
-    "DEPLOYMENT_URL = os.getenv(\"DEPLOYMENT_URL\")  # e.g. \"http://localhost:2024\" or your cloud URL\n",
-    "API_KEY = os.getenv(\"API_KEY\")  # If using deployed graph\n",
+    "DEPLOYMENT_URL = os.getenv(\"DEPLOYMENT_URL\")  # e.g. If running locally via langgraph dev command: \"http://localhost:2024\" or your cloud deployment URL\n",
+    "API_KEY = os.getenv(\"API_KEY\")  # If using deployed graph on LangGraph Platform\n",
     "GRAPH_ID = \"react_agent\"  # Name of the graph, normally set in your langgraph.json file.\n",
     "\n"
    ]
