update for lc and lg v1

--- a/notebooks/assistant_test.ipynb
+++ b/notebooks/assistant_test.ipynb
@@ -60,8 +60,8 @@
     "    config={\n",
     "        \"configurable\": {\n",
     "            \"system_prompt\": \"You are a helpful AI assistant that can help with research.\",\n",
-    "            \"model\": \"openai/gpt-4.1\",\n",
-    "            \"selected_tools\": [\"get_todays_date\", \"advanced_research_tool\"]\n",
+    "            \"model\": \"openai:gpt-5\",\n",
+    "            \"selected_tools\": [\"get_todays_date\", \"advanced_research\"]\n",
     "        }\n",
     "    },\n",
     "    name=\"Demo Assistant\"\n",
@@ -166,7 +166,7 @@
     "    assistant[\"assistant_id\"],\n",
     "    config={\n",
     "        \"configurable\": {\n",
-    "            \"model_name\": \"openai/gpt-4.1\",\n",
+    "            \"model_name\": \"openai:gpt-5\",\n",
     "            \"system_prompt\": \"You are a funny assistant who likes to include puns in your responses.\"\n",
     "        }\n",
     "    },\n",
